# sphinx-test

./: .gitignore  LICENSE  README.md  gen_doc.sh  pyproject.toml
docs/: conf.py  index.rst  sphinx_test.rst
src/sphinx_test/: __init__.py  my_module.py  my_module2.py  sphinx-test.code-workspace
src/sphinx_test/utils/: utils.py
