[project]
name = "sphinx-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yosuke Horie", email = "Yosuke.Horie@sony.com" }
]
dependencies = [
    "pip>=24.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_test"]
